Fixing js to hide thumbnails once clicked to not have weird white spaces

--- a/sass/_contactme.scss
+++ b/sass/_contactme.scss
@@ -34,7 +34,7 @@
     		border: none;
     		&:focus{
     			color:$color4;
-    			background: $color3;
+    			background: $color1;
     		}
 		}
 
