--- a/sass/_social.scss
+++ b/sass/_social.scss
@@ -40,6 +40,7 @@
 		background-color: $color1;
 		border:0;
 		margin: 0 auto 70px;
+		opacity: 0.5;
 	}
 
 	.big-email{
